# agent-tools-gateway

./: .gitignore  Dockerfile  README.md  README.zh-CN.md  config.example.yaml  docker-compose.debug.yml  docker-compose.yml  mcp_server.py  pyproject.toml  renovate.json
src/toolhub/: __init__.py  api.py  cli.py  config.py  errors.py  mcp_server.py  models.py  registry.py  security.py  service.py
src/toolhub/backends/: __init__.py  convertx.py  docling.py  searxng.py  webcapture.py
src/toolhub/tools/: __init__.py
src/toolhub/tools/convertx/: __init__.py  backend.py  client.py  models.py
src/toolhub/tools/docling/: __init__.py  backend.py  client.py  models.py
src/toolhub/tools/searxng/: __init__.py  backend.py  client.py  models.py
src/toolhub/tools/webcapture/: __init__.py  backend.py  client.py  models.py
src/toolhub/tools/windesktop/: __init__.py  backend.py  client.py  models.py
tests/: conftest.py  test_cli.py  test_config.py  test_convertx_flow.py  test_convertx_parser.py  test_docling_flow.py  test_registry.py  test_searxng_flow.py  test_security.py  test_tar_extract.py  test_webcapture_flow.py  test_windesktop_flow.py
tools/ConvertX/: README.md
tools/Docling/: README.md
tools/SearXNG/: README.md
tools/SearXNG/config/: settings.yml
tools/WebCapture/: README.md
tools/WinDesktop/: README.md
tools/WinDesktop/bridge/: install-deps.ps1  install-local.ps1  install-startup-task.ps1  requirements.txt  run-server.ps1  run.ps1  start-background.ps1  stop-background.ps1  uninstall-startup-task.ps1  windesktop_bridge.py
